--- a/Tasky/app/src/main/res/values/strings.xml
+++ b/Tasky/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Tasky</string>
     <string name="add">Add new task</string>
+    <string name="addCategory">Add new category</string>
+    <string-array name="category_array">
+        <item>Faculty</item>
+        <item>Work</item>
+        <item>Shopping</item>
+        <item>Other</item>
+    </string-array>
+    <string-array name="priority_array">
+        <item>Low</item>
+        <item>Medium</item>
+        <item>High</item>
+    </string-array>
 </resources>
